--- a/wheel/templates/wheel/submit_failure.html
+++ b/wheel/templates/wheel/submit_failure.html
@@ -1,2 +1,4 @@
+
 <h1>A problem happened during the submission of your project.</h1>
-<a href='../random_project'>Return to random projects</a>
+<p>{{errors}}</p>
+<a href='../../'>Go gome</a>
