--- a/wheel/templates/wheel/submit_form.html
+++ b/wheel/templates/wheel/submit_form.html
@@ -1,4 +1,4 @@
-<form action="/wheel/submit_project_ok/" method="post">
+<form action="/wheel/submit_ok/" method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Submit" />
