--- a/wheel/templates/wheel/fullpage.html
+++ b/wheel/templates/wheel/fullpage.html
@@ -3,8 +3,10 @@
     <head>
         <title>VRRoulette</title>
         
+        {% load staticfiles %}
+        
         {% block css %}
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
         {% endblock %}
         
         {% block js %}
@@ -12,7 +14,9 @@
         {% endblock %}
 
     </head>
+
     <body>
+    <img src="media/images/mount-tower.jpg"/>
         <div id="container" >
             <div id="header">
                 {% block header %}
@@ -21,7 +25,7 @@
             </div>
             <div id="content">
                 {% block content %}
-                <h3>Voici mon application : </h3>
+                <h3>Super App</h3>
                 {% endblock %}
             </div>
             <div id="footer">
