--- a/wheel/templates/wheel/fullpage.html
+++ b/wheel/templates/wheel/fullpage.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <title>VRRoulette</title>
-        
+
         {% load staticfiles %}
-        
+
         {% block css %}
-        <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+        <link rel="stylesheet" href="{% static 'css/style.css' %}" />
         {% endblock %}
-        
+
         {% block js %}
         <script src="script.js"></script>
         {% endblock %}
