--- a/wheel/templates/wheel/header.html
+++ b/wheel/templates/wheel/header.html
@@ -1,2 +1,8 @@
-<h1>VR Roulette</h1>
-<a href="submit/">submit project</a>
+{% load staticfiles %}
+
+<img src="{% static 'img/logo.png' %}"/>
+<br>
+<a id="random", href="/">RANDOM PROJECT</a>
+<a id="submit", href="submit/">SUBMIT PROJECT</a>
+
+
