--- a/wheel/templates/wheel/submit_ok.html
+++ b/wheel/templates/wheel/submit_ok.html
@@ -1,2 +1,11 @@
-<h1>Thanks !</h1>
-<a href='../../'>Go home</a>
+{% extends "wheel/fullpage.html" %}
+
+{% load staticfiles %}
+
+{% block content %}
+
+<div class="project">
+    <h1>Et voilà !</h1>
+</div>
+
+{% endblock %}
