--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,216 @@
+html {
+  height: 100%;
+}
+
 body {
-    background-color: red;
+    background-image: url('../img/bg.png');
+    font-family: 'Oswald', sans-serif;
+    margin: 0 0 60px;
+}
+
+.clear {
+    clear: both;
+}
+/* header */
+
+#header {
+    text-align: center;
+}
+
+
+#header a {
+    display: inline-block;
+    height: 20px;
+    color: white;
+    padding: 0.2em 0.5em 0.4em 0.5em;
+    text-decoration: none;
+}
+
+#header #random {
+    background-color: #08a900;
+}
+
+#header #submit {
+    background-color: #0054a9;
+}
+
+/* Footer */
+
+#footer {
+    /*height: 60px;*/
+    width: 100%;
+    /*background-color: #0f0f0f;*/
+}
+
+#footer {
+    text-align: center;
+    padding: 1px;
+}
+
+#footer p {
+    margin: 15px auto 0 auto;
+    width: 400px;
+    border-top: 1px solid #0f0f0f;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: #0f0f0f;
+    font-size: 0.7em;
+    font-weight: 300;
+}
+
+/* Project */
+
+.project {
+    width: 1015px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px
+}
+
+/* Project Image */
+
+.project_image img {
+    width: 500px;
+}
+
+.project_image {
+    float: left;
+}
+
+/* Project Desc */
+
+.project_desc {
+    float: left;
+    width: 500px;
+    margin-left: 15px;
+}
+
+.project_desc h1, .project_desc h2, .project_desc p {
+    font-size: 1em;
+}
+
+.project_desc h1 {
+    margin-top: 0;
+}
+
+.project_desc .name {
+    font-size: 2em;
+}
+
+.project_desc .desc, .project_desc .creator a, .project_desc h2 span {
+    font-weight: 300;
+}
+
+.project_desc .creator a {
+    text-decoration: none;
+    color: #0054a9;
+}
+
+.project_desc .url {
+    display: inline-block;
+    height: 20px;
+    color: white;
+    padding: 0.2em 0.5em 0.4em 0.5em;
+    text-decoration: none;
+    background-color: #0054a9;
+}
+
+/* Form */
+
+.submit_form{
+    max-width: 500px;
+    padding: 10px 20px;
+    background: #f4f7f8;
+    margin: 30px auto;
+    padding: 20px;
+}
+.submit_form fieldset{
+    border: none;
+}
+.submit_form legend {
+    font-size: 1.4em;
+    margin-bottom: 10px;
+}
+.submit_form label {
+    display: block;
+    margin-bottom: 8px;
+}
+.submit_form input[type="text"],
+.submit_form input[type="date"],
+.submit_form input[type="datetime"],
+.submit_form input[type="email"],
+.submit_form input[type="number"],
+.submit_form input[type="search"],
+.submit_form input[type="time"],
+.submit_form input[type="url"],
+.submit_form textarea,
+.submit_form select {
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    margin: 0;
+    outline: 0;
+    padding: 7px;
+    width: 100%;
+    box-sizing: border-box; 
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box; 
+    background-color: #e8eeef;
+    color:#8a97a0;
+    -webkit-box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+    box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+    margin-bottom: 30px;
+    
+}
+.submit_form input[type="text"]:focus,
+.submit_form input[type="date"]:focus,
+.submit_form input[type="datetime"]:focus,
+.submit_form input[type="email"]:focus,
+.submit_form input[type="number"]:focus,
+.submit_form input[type="search"]:focus,
+.submit_form input[type="time"]:focus,
+.submit_form input[type="url"]:focus,
+.submit_form textarea:focus,
+.submit_form select:focus{
+    background: #d2d9dd;
+}
+.submit_form select{
+    -webkit-appearance: menulist-button;
+    height:35px;
+}
+.submit_form .number {
+    background: #1abc9c;
+    color: #fff;
+    height: 30px;
+    width: 30px;
+    display: inline-block;
+    font-size: 0.8em;
+    margin-right: 4px;
+    line-height: 30px;
+    text-align: center;
+    text-shadow: 0 1px 0 rgba(255,255,255,0.2);
+    border-radius: 15px 15px 15px 0px;
+}
+
+.submit_form input[type="submit"],
+.submit_form input[type="button"]
+{
+    position: relative;
+    display: block;
+    padding: 19px 39px 18px 39px;
+    color: #FFF;
+    margin: 0 auto;
+    background: #1abc9c;
+    font-size: 18px;
+    text-align: center;
+    font-style: normal;
+    width: 100%;
+    border: 1px solid #16a085;
+    border-width: 1px 1px 3px;
+    margin-bottom: 10px;
+}
+.submit_form input[type="submit"]:hover,
+.submit_form input[type="button"]:hover
+{
+    background: #109177;
 }
